--- a/html.html
+++ b/html.html
@@ -7,33 +7,39 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Cartoon GIF Generator</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="assets/javascript/app.js"></script>
-        <link href="assets/css/style.css" rel="stylesheet">
+
         </head>
 	<body>
-    <div class="container">
-		<div class = "row">
+ <div class="container">   
+    <div class="jumbotron">
+		<div >
 			<h1>Favorite shows</h1>
 			<div id = "main-buttons" class = "border border-success">
 			</div>
-		</div>
+        </div>
+        <div>
+            <form class="comic-sans-font">
+                Manga, Anime or Cartoons:<br>
+                <input type = "text" name = "AMCshow" id = "AMCshow" class="comic-sans-font">
+                <input type = "submit" value = "Submit" class = "btn" id = "submit">
+            </form>
+        </div>
+    </div>
+</div>
+    <div class="container">
 		<div class = "row">
 			<div id = "gifs" class = "col-xs-8 comic-sans-font">
 			</div>
 			<div class = "col-xs-1">
 			</div>
-			<div class = "col-xs-3">
-				<form class="comic-sans-font">
-					Manga, Anime or Cartoons:<br>
-					<input type = "text" name = "AMCshow" id = "AMCshow" class="comic-sans-font">
-					<input type = "submit" value = "Submit" class = "btn" id = "submit">
-				</form>
-			</div>
         </div>
     </div>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-	</body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link href="assets/css/style.css" rel="stylesheet">
+
+    </body>
 </html>
