--- a/html.html
+++ b/html.html
@@ -1,5 +1,3 @@
-<!-- <div id="main-buttons"></div>
-<div id="gifs"></div> -->
 
 
 <!DOCTYPE html>
@@ -9,9 +7,8 @@
 		<title>Cartoon GIF Generator</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <script src="assets/javascript/app.js"></script>
-
-        </head>
+        <link href="assets/css/style.css" rel="stylesheet">
+    </head>
 	<body>
  <div class="container">   
     <div class="jumbotron">
@@ -22,24 +19,21 @@
         </div>
         <div>
             <form class="comic-sans-font">
-                Manga, Anime or Cartoons:<br>
+                <h5>Manga, Anime or Cartoons:</h5>
+                <br>
                 <input type = "text" name = "AMCshow" id = "AMCshow" class="comic-sans-font">
                 <input type = "submit" value = "Submit" class = "btn" id = "submit">
             </form>
         </div>
     </div>
 </div>
-    <div class="container">
-		<div class = "row">
-			<div id = "gifs" class = "col-xs-8 comic-sans-font">
-			</div>
-			<div class = "col-xs-1">
-			</div>
-        </div>
-    </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link href="assets/css/style.css" rel="stylesheet">
+      
+<div id = "gifs" class="container"></div>	
+         
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="assets/javascript/app.js"></script>
+
 
     </body>
 </html>
